# cggi

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  cggi.cpp  cggi.hpp  cggi_demo.cpp  cggi_element.hpp  cggi_ostream.hpp  cggi_session.hpp  cggi_strings.hpp  cggi_visitor.hpp
